# django-keycloak-app

./: .gitignore  Makefile  README.md  env.sample  manage.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
app/api/: urls.py  views.py
app/user_keycloak/: apps.py  auth_backends.py  auth_views.py  authentication.py  client.py  context_processors.py  decorators.py  exceptions.py  middleware.py  permissions.py  redis_util.py  urls.py  user.py  utils.py  validators.py  validators_pyjwt.py  views.py
app/user_keycloak/management/: cmd.txt
app/user_keycloak/management/commands/: check_keycloak_health.py  cleanup_keycloak_cache.py  validate_keycloak_token.py
core/: settings.py
docs/: django_setup.sh  keycloak_setup.md
docs/no_django_auths/: no_django_auth_steps.md  ph4.md  phase1.md
infraon/: asgi.py  urls.py  wsgi.py
settings/: settings.py
templates/: base.html  home.html  profile.html
templates/account/: login.html  logout.html
templates/auth/: error.html  login.html  logout.html
tmp/: test.txt
