[project]
# Support Python 3.12+.
requires-python = ">=3.12"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120
exclude = [".git", "*.bpmn", "*.xml", "*pyc", "logs", "docs", ".ruff_cache",".venv", "__pycache__", "dist", "node_modules", "venv", "xample_bpmn", "tmp", ".env", ".vscode"]

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501", "E", "F"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
